// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderFrameBlurred > blue の 1.20 秒が変わっていない 1`] = `
"000000000000|000013310000
000011110000|000464464000
000112211000|004525625400
001138841100|006288882600
00115ff61100|00628ee82600
001138931100|006278972600
000112211000|004435654400
000011110000|000564465000
000000000000|000013310000"
`;

exports[`renderFrameBlurred > blue の 1.95 秒が変わっていない 1`] = `
"000000000000|000001110000
000112221000|000145441000
000234432000|001468864200
001356653100|00369bb96300
00146aa64200|0036adda6300
001356653100|00369bb96300
000234432000|001468864100
000122221000|000135541000
000000000000|000001100000"
`;

exports[`renderFrameBlurred > blue の 2.95 秒が変わっていない 1`] = `
"000000000000|002578875200
002455554200|06abbbbbba60
02aeffffea20|2a97676669a2
03cffffffc30|5a83344338a5
03dffffffd30|6a83344338a6
03cffffffc30|5a82344328a5
02aeffffea20|2a85566559a2
002455554200|06abbbbbba60
000000000000|002578875200"
`;

exports[`renderFrameBlurred > blue の 4.50 秒が変わっていない 1`] = `
"000000000000|000000000000
000111111000|005666666500
008eeeeee800|039666666930
00bffffffb00|048223322840
00bffffffb00|048222222840
00bffffffb00|047122221840
009eeeeee900|038445554930
000111111000|005777777500
000000000000|000000000000"
`;

exports[`renderFrameBlurred > blue の 7.70 秒が変わっていない 1`] = `
"000000000000|000000000000
000111111000|006777777600
008dddddd800|059666666950
00aeeeeeea00|068223322860
00aeeeeeea00|067222222860
00aeeeeeea00|067122221860
008dddddd900|058445544950
001111111100|016888888610
000000000000|000000000000"
`;

exports[`renderFrameBlurred > gold の 1.20 秒が変わっていない 1`] = `
"000000000000|000002200000
000011110000|000342243000
000112211000|002313313200
00114aa51100|004146641400
00117ff81100|00415cc51400
00114bb41100|004146641400
000112311000|002313333200
000011110000|000342233000
000000000000|000002200000"
`;

exports[`renderFrameBlurred > gold の 1.95 秒が変わっていない 1`] = `
"000000000000|000001110000
000112221000|000245541000
000234432000|001578875200
001356653100|00369bb96300
00146aa64200|0047adda7400
001356653100|00369bb96300
000234432000|001578875100
000122221000|000245541000
000000000000|000001100000"
`;

exports[`renderFrameBlurred > gold の 2.95 秒が変わっていない 1`] = `
"000011110000|00379aa97400
002577776310|08bccccccb80
028eefffeb30|4bb8899879b5
04bffffffe51|8ba4688648b8
04cffffffe61|8ba479a858b9
04bffffffe61|8ba3588648b9
029ffffffc40|5ba5688769b5
003688887410|08bccccccb90
000111111000|0047abba8400"
`;

exports[`renderFrameBlurred > gold の 4.50 秒が変わっていない 1`] = `
"000000000000|001355553100
002333333200|05bbbbbbbb50
019eeeeee910|1ba766789bb1
02cffffffc20|3b8222457ab3
02cffffffc20|4b8122246ab4
02cffffffc20|3b8122234ab3
01affffffa10|1b9445555ab1
002444444200|05bbbbbbbb50
000000000000|001455554100"
`;

exports[`renderFrameBlurred > gold の 7.70 秒が変わっていない 1`] = `
"000000000000|002466664200
002344443200|06bbbbbbbb60
019dddddd910|2ba7666669b2
02beeeeeeb20|5b82222228b5
03beeeeeeb30|5b81222218b5
02beeeeeeb20|5b81222218b5
029dddddd920|2b94455559b2
002444444200|06bbbbbbbb60
000000000000|002567765200"
`;

exports[`renderFrameBlurred > green の 1.20 秒が変わっていない 1`] = `
"000000000000|000002200000
000011110000|000343343000
000112211000|003313423300
001149951100|004156651400
00116ff71100|00416dd61400
001149a41100|004156751400
000112211000|003324433300
000011110000|000343343000
000000000000|000012210000"
`;

exports[`renderFrameBlurred > green の 1.95 秒が変わっていない 1`] = `
"000000000000|000001110000
000112221000|000134431000
000234432000|001456654100
001356653100|002579975200
00146aa64200|00358cc85300
001356653100|003579975200
000234432000|001456654100
000122221000|000134431000
000000000000|000001100000"
`;

exports[`renderFrameBlurred > green の 2.95 秒が変わっていない 1`] = `
"000001100000|002567765200
002566665300|05999aa99960
029effffea30|398666655793
03cffffffd40|597234432695
04cffffffd40|597234532796
03cffffffd40|597234432695
02affffffb30|397445655793
003566765300|069999999960
000011110000|002578875200"
`;

exports[`renderFrameBlurred > green の 4.50 秒が変わっていない 1`] = `
"000000000000|000000000000
001111111100|016788887610
009eeeeee900|058655544750
01bffffffb10|067122221660
01bffffffb10|066122221760
01bffffffb10|066122211760
009effffe900|057334444850
001222222100|016888888610
000000000000|000000000000"
`;

exports[`renderFrameBlurred > green の 7.70 秒が変わっていない 1`] = `
"000000000000|000000000000
001222222100|017899998710
008dddddd800|068655544760
01beeeeeeb10|076122221670
01beeeeeeb10|076112211670
01beeeeeeb10|076122211670
019dddddd910|067334444760
001222222100|027999999720
000000000000|000000000000"
`;

exports[`renderFrameBlurred > rainbow の 1.20 秒が変わっていない 1`] = `
"000000000000|000001100000
000011110000|000332233000
000113311000|002312313200
00115cc61100|004146641400
00119ff91100|00315cc51300
00115cc51100|004146641400
000113311000|002212332200
000011110000|000342233000
000000000000|000002200000"
`;

exports[`renderFrameBlurred > rainbow の 1.95 秒が変わっていない 1`] = `
"000000000000|000001110000
000112221000|000145541000
000234432000|001468864200
001356653100|00369bb96300
00146aa64200|0037adda7300
001356653100|00369bb96300
000234432000|001468864100
000122221000|000145541000
000000000000|000001100000"
`;

exports[`renderFrameBlurred > rainbow の 2.95 秒が変わっていない 1`] = `
"000011110000|0048abba8400
002577776310|08ddeeddcc90
028eefffeb30|5cc89aaa89c6
03bffffffe61|8cb4699758c9
04cffffffe61|8cb47ab858ca
04bffffffe61|8cb4699747c9
029ffffffc40|5cb5799768c6
003689987410|09cddddddc91
000111111000|0048accb8500"
`;

exports[`renderFrameBlurred > rainbow の 4.50 秒が変わっていない 1`] = `
"000000000000|001456664100
002344443200|06cccccccc60
019eeeeee910|1cb88889abc1
02cffffffc20|4ca555467bc4
02cffffffc20|5da455456bd5
02dffffffc20|4da345434ad4
01affffffa10|2da556655ac2
002444444200|06dccccccc60
000000000000|001566665100"
`;

exports[`renderFrameBlurred > rainbow の 7.70 秒が変わっていない 1`] = `
"000000000000|002577765200
002444444200|07dddccccc60
029dddddd920|2db888776ac2
03beeeeeeb30|6c95553228c6
03ceeeeeec30|6c94554229d7
03beeeeeeb30|6c93444219d6
029dddddd920|2c9556654ad3
002444444200|07cccccccd70
000000000000|002577775200"
`;

exports[`renderFrameBlurred > red の 1.20 秒が変わっていない 1`] = `
"000000000000|000001100000
000012210000|000245542000
000236632000|002455554200
0012aeea2100|003558855300
0013dffd3100|00456ee65400
0012aefa2100|003558855300
000236632000|002455554200
000012210000|000245542000
000000000000|000001100000"
`;

exports[`renderFrameBlurred > red の 1.95 秒が変わっていない 1`] = `
"000000000000|000001110000
000112221000|000134431000
000234432000|001356653100
001356653100|002579975200
00146aa64200|00358cc85300
001356653100|002579975200
000234432000|001456653100
000122221000|000134431000
000000000000|000001100000"
`;

exports[`renderFrameBlurred > red の 2.95 秒が変わっていない 1`] = `
"000011110000|002578875300
003577776310|06899aaa9860
029effffeb30|388767766784
04cffffffd51|588356753686
04cffffffe61|688357864686
04cffffffe51|687347753686
039ffffffb30|387456765784
003678876410|06899aaa9860
000011111000|003578875300"
`;

exports[`renderFrameBlurred > red の 4.50 秒が変わっていない 1`] = `
"000000000000|000112211000
001233332100|027888888720
019eeeeee910|078655444770
01cffffffc10|186112211681
01cffffffc10|186111111681
01cffffffc10|186112211681
01affffffa10|077334444770
001333333100|028888888820
000000000000|000122221000"
`;

exports[`renderFrameBlurred > red の 7.70 秒が変わっていない 1`] = `
"000000000000|000233332000
001333333100|038888888830
019dddddd910|088655444780
02beeeeeeb20|186112211681
02beeeeeeb20|286111111682
02beeeeeeb20|186112211681
019dddddd910|087334444780
002333333200|038888888830
000000000000|000233332000"
`;

exports[`renderFrameBlurred > white の 1.20 秒が変わっていない 1`] = `
"000000000000|000013310000
000011110000|000464464000
000112211000|004525625400
001138841100|006288882600
00115ff61100|00628ee82600
001138931100|006278972600
000112211000|004435654400
000011110000|000564465000
000000000000|000013310000"
`;

exports[`renderFrameBlurred > white の 1.95 秒が変わっていない 1`] = `
"000000000000|000001110000
000112221000|000256652000
000234432000|00269bb96200
001356653100|0048ceec8400
00146aa64200|0049dffd9400
001356653100|0048ceec8400
000234432000|00269bb96200
000122221000|000256652000
000000000000|000001100000"
`;

exports[`renderFrameBlurred > white の 2.95 秒が変わっていない 1`] = `
"000000000000|001478874100
001333333100|05effffffe50
01aeeeeeea10|1ec888887ce1
02cffffffc20|3fa334433af3
02cffffffc20|4fa234432af4
02cffffffc20|3fa233332af3
01aeffffea10|1ec667766ce1
002344443200|06effffffe60
000000000000|001479974100"
`;

exports[`renderFrameBlurred > white の 4.50 秒が変わっていない 1`] = `
"000000000000|000000000000
000000000000|002333333200
007dddddd700|00c888877b00
009ffffff900|00a233332a00
009ffffff900|00a223322a00
00affffff900|00a123321a00
008eeeeee800|00b567666b00
000000000000|002444444200
000000000000|000000000000"
`;

exports[`renderFrameBlurred > white の 7.70 秒が変わっていない 1`] = `
"000000000000|000000000000
000000000000|002444444300
007cccccc700|01c888877c10
009eeeeee900|01a233332a10
009eeeeee900|01a223322a10
009eeeeee900|01a122221a10
007dddddd700|01b556665b10
000000000000|003555555300
000000000000|000000000000"
`;
